[project]
name = "pp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "jose>=1.0.0",
    "jwt>=1.3.1",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-orm>=1.2.10",
    "uvicorn>=0.34.2",
]
